python/cloud-fund-demo-python/setup/deployments/cloud-fund-backend-sgx-prod.yml
apiVersion: v1
kind: Pod
metadata:
  name: cloud-fund-backend
  labels:
    app: cloud-fund-backend
spec:
  containers:
  - name: mariadb
    image: mariadb:latest
    ports:
    - containerPort: 3306
      hostPort: 3306
      name: mariadb
      protocol: TCP
  - name: java
    image: registry.ng.bluemix.net/datashield-core/cloud-fund-backend-sgx-production
    ports:
    - containerPort: 8080
    volumeMounts:
    - mountPath: /dev/isgx
      name: isgx
    - mountPath: /dev/gsgx
      name: gsgx
    - mountPath: /var/run/aesmd/aesm.socket
      name: aesm-socket
  volumes:
  - name: isgx
    hostPath:
      path: /dev/isgx
      type: CharDevice
  - name: gsgx
    hostPath:
      path: /dev/gsgx
      type: CharDevice
  - name: aesm-socket
    hostPath:
      path: /var/run/aesmd/aesm.socket
      type: Socket
  restartPolicy: OnFailure
