python/cloud-fund-demo-python/setup/deployments/cloud-fund-backend-sgx.yml
apiVersion: "v1"
kind: Pod
metadata:
  name: cloud-fund-backend
  labels:
    app: cloud-fund-backend
    env: test
spec:
  containers:
  - name: cloud-fund-backend
    image: us.icr.io/cloud-fund/cloud-fund-backend-sgx
    volumeMounts:
    - mountPath: /dev/isgx
      name: isgx
    - mountPath: /dev/gsgx
      name: gsgx
    - mountPath: /var/run/aesmd/aesm.socket
      name: aesm-socket
    - name: secret-volume
      mountPath: /etc/secret-volume
  volumes:
  - name: isgx
    hostPath:
      path: /dev/isgx
      type: CharDevice
  - name: gsgx
    hostPath:
      path: /dev/gsgx
      type: CharDevice
  - name: aesm-socket
    hostPath:
      path: /var/run/aesmd/aesm.socket
      type: Socket
  - name: secret-volume
    secret:
      secretName: cloud-fund-environment-secrets
