python/cloud-fund-demo-python/setup/deployments/cloud-fund-backend.yml
apiVersion: "v1"
kind: Pod
metadata:
  name: cloud-fund-backend
  labels:
    app: cloud-fund-backend
    env: test
spec:
  containers:
  - name: cloud-fund-backend
    image: us.icr.io/cloud-fund/cloud-fund-backend
    volumeMounts:
    - name: secret-volume
      mountPath: /etc/secret-volume
    ports:
    - name: http
      containerPort: 8500
      protocol: TCP
  volumes:
  - name: secret-volume
    secret:
      secretName: cloud-fund-environment-secrets
