python/cloud-fund-demo-python/setup/deployments/cloud-fund-bff.yml
apiVersion: "v1"
kind: Pod
metadata:
  name: cloud-fund-bff
  labels:
    app: cloud-fund-bff
spec:
  containers:
    - name: cloud-fund-bff
      image: us.icr.io/cloud-fund/cloud-fund-bff
      ports:
        - name: http
          containerPort: 8000
          protocol: TCP
      volumeMounts:
        - name: secret-volume
          mountPath: /etc/secret-volume
  volumes:
    - name: secret-volume
      secret:
        secretName: cloud-fund-environment-secrets
