python/cloud-fund-demo-python/setup/deployments/cloud-fund-bff-service.yml
apiVersion: v1
kind: Service
metadata:
  name: cloud-fund-bff-service
spec:
  selector:
    app: cloud-fund-bff
  ports:
   - protocol: TCP
     port: 8000
