python/cloud-fund-demo-python/setup/deployments/cloud-fund-frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: cloud-fund-frontend-service
spec:
  selector:
    app: cloud-fund-frontend
  ports:
   - protocol: TCP
     port: 3000
